Employee Free Time - Refactor logic and add null checks